--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="error">Error</string>
+    <string name="error">Too Many Request</string>
     <string name="codeTR">Kod</string>
     <string name="codeEN">Code</string>
     <string name="nameTR">İsim</string>
